test/tools/javac/annotations/annotationsInComments/Test03.out
Test03.java:10:4: compiler.err.cant.resolve: kindname.class, Unknown, , 
1 error
